@@ -1,22 +1,6 @@
 <INCLUDE>libxfce4menu/libxfce4menu.h</INCLUDE>
 
 <SECTION>
-<FILE>xfce-menu-and-rules</FILE>
-<TITLE>XfceMenuAndRules</TITLE>
-XfceMenuAndRules
-XfceMenuAndRulesClass
-xfce_menu_and_rules_new
-<SUBSECTION Standard>
-XFCE_MENU_AND_RULES
-XFCE_IS_MENU_AND_RULES
-XFCE_TYPE_MENU_AND_RULES
-xfce_menu_and_rules_get_type
-XFCE_MENU_AND_RULES_CLASS
-XFCE_IS_MENU_AND_RULES_CLASS
-XFCE_MENU_AND_RULES_GET_CLASS
-</SECTION>
-
-<SECTION>
 <FILE>xfce-menu-directory</FILE>
 <TITLE>XfceMenuDirectory</TITLE>
 XfceMenuDirectoryPrivate
@@ -218,92 +202,6 @@ XFCE_MENU_LAYOUT_GET_CLASS
 <TITLE>Monitoring</TITLE>
 XfceMenuMonitorVTable
 xfce_menu_monitor_set_vtable
-</SECTION>
-
-<SECTION>
-<FILE>xfce-menu-move</FILE>
-<TITLE>XfceMenuMove</TITLE>
-XfceMenuMoveClass
-XfceMenuMove
-xfce_menu_move_new
-xfce_menu_move_get_old
-xfce_menu_move_set_old
-xfce_menu_move_get_new
-xfce_menu_move_set_new
-<SUBSECTION Standard>
-XFCE_MENU_MOVE
-XFCE_IS_MENU_MOVE
-XFCE_TYPE_MENU_MOVE
-xfce_menu_move_get_type
-XFCE_MENU_MOVE_CLASS
-XFCE_IS_MENU_MOVE_CLASS
-XFCE_MENU_MOVE_GET_CLASS
-</SECTION>
-
-<SECTION>
-<FILE>xfce-menu-not-rules</FILE>
-<TITLE>XfceMenuNotRules</TITLE>
-XfceMenuNotRules
-XfceMenuNotRulesClass
-xfce_menu_not_rules_new
-<SUBSECTION Standard>
-XFCE_MENU_NOT_RULES
-XFCE_IS_MENU_NOT_RULES
-XFCE_TYPE_MENU_NOT_RULES
-xfce_menu_not_rules_get_type
-XFCE_MENU_NOT_RULES_CLASS
-XFCE_IS_MENU_NOT_RULES_CLASS
-XFCE_MENU_NOT_RULES_GET_CLASS
-</SECTION>
-
-<SECTION>
-<FILE>xfce-menu-or-rules</FILE>
-<TITLE>XfceMenuOrRules</TITLE>
-XfceMenuOrRules
-XfceMenuOrRulesClass
-xfce_menu_or_rules_new
-<SUBSECTION Standard>
-XFCE_MENU_OR_RULES
-XFCE_IS_MENU_OR_RULES
-XFCE_TYPE_MENU_OR_RULES
-xfce_menu_or_rules_get_type
-XFCE_MENU_OR_RULES_CLASS
-XFCE_IS_MENU_OR_RULES_CLASS
-XFCE_MENU_OR_RULES_GET_CLASS
-</SECTION>
-
-<SECTION>
-<FILE>xfce-menu-rules</FILE>
-<TITLE>XfceMenuRules</TITLE>
-XfceMenuRules
-XfceMenuRulesIface
-xfce_menu_rules_match
-xfce_menu_rules_add_all
-xfce_menu_rules_add_rules
-xfce_menu_rules_add_filename
-xfce_menu_rules_add_category
-<SUBSECTION Standard>
-XFCE_MENU_RULES
-XFCE_IS_MENU_RULES
-XFCE_TYPE_MENU_RULES
-xfce_menu_rules_get_type
-XFCE_MENU_RULES_GET_IFACE
-</SECTION>
-
-<SECTION>
-<FILE>xfce-menu-standard-rules</FILE>
-<TITLE>XfceMenuStandardRules</TITLE>
-XfceMenuStandardRules
-xfce_menu_standard_rules_get_include
-xfce_menu_standard_rules_set_include
-<SUBSECTION Standard>
-XFCE_MENU_STANDARD_RULES
-XFCE_IS_MENU_STANDARD_RULES
-XFCE_TYPE_MENU_STANDARD_RULES
-xfce_menu_standard_rules_get_type
-XFCE_MENU_STANDARD_RULES_CLASS
-XFCE_IS_MENU_STANDARD_RULES_CLASS
-XFCE_MENU_STANDARD_RULES_GET_CLASS
 </SECTION>
 
 <SECTION>
