@@ -6,10 +6,10 @@ xfce_menu_directory_get_type
 xfce_menu_item_get_type
 xfce_menu_item_pool_get_type
 xfce_menu_item_cache_get_type
-xfce_menu_rules_get_type
-xfce_menu_standard_rules_get_type
-xfce_menu_or_rules_get_type
-xfce_menu_and_rules_get_type
-xfce_menu_not_rules_get_type
 xfce_menu_layout_get_type
 xfce_menu_separator_get_type
+xfce_menu_node_get_type
+xfce_menu_tree_provider_get_type
+xfce_menu_parser_get_type
+xfce_menu_merger_get_type
+xfce_menu_node_type_get_type
